fix style regression (header was too big)

--- a/public/style.css
+++ b/public/style.css
@@ -119,7 +119,7 @@ h3{
     text-shadow:1px 1px 0 #fff;
 }
 
-p{
+.doc p{
     line-height:150%;
 }
 
